drawinglayer/source/primitive2d/glowprimitive2d.cxx
@@ -205,9 +205,15 @@ void GlowPrimitive2D::create2DDecomposition(
             // When blurring a sharp boundary (our case), it gets 50% of original intensity, and
             // fades to both sides by the blur radius; thus blur radius is half of glow radius.
             // Consider glow transparency (initial transparency near the object edge)
-            const AlphaMask mask(ProcessAndBlurAlphaMask(aAlpha, fDiscreteGlowRadius * fScale / 2.0,
-                                                         fDiscreteGlowRadius * fScale / 2.0,
-                                                         255 - getGlowColor().GetAlpha()));
+            AlphaMask mask(ProcessAndBlurAlphaMask(aAlpha, fDiscreteGlowRadius * fScale / 2.0,
+                                                   fDiscreteGlowRadius * fScale / 2.0,
+                                                   255 - getGlowColor().GetAlpha()));
+
+            // tdf#157502 and tdf#157652 invert alpha mask
+            // Due to the switch from transparency to alpha in commit
+            // 81994cb2b8b32453a92bcb011830fcb884f22ff3, invert the alpha
+            // mask.
+            mask.Invert();
 
             // The end result is the bitmap filled with glow color and blurred 8-bit alpha mask
             Bitmap bmp(aAlpha.GetSizePixel(), vcl::PixelFormat::N24_BPP);
